--- a/01-intro/trial_homework.ipynb
+++ b/01-intro/trial_homework.ipynb
@@ -276,8 +276,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "bfab83e7-9c31-4c44-918a-d4939e9f25b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VendorID                          int32\n",
+       "tpep_pickup_datetime     datetime64[us]\n",
+       "tpep_dropoff_datetime    datetime64[us]\n",
+       "passenger_count                 float64\n",
+       "trip_distance                   float64\n",
+       "RatecodeID                      float64\n",
+       "store_and_fwd_flag               object\n",
+       "PULocationID                      int32\n",
+       "DOLocationID                      int32\n",
+       "payment_type                      int64\n",
+       "fare_amount                     float64\n",
+       "extra                           float64\n",
+       "mta_tax                         float64\n",
+       "tip_amount                      float64\n",
+       "tolls_amount                    float64\n",
+       "improvement_surcharge           float64\n",
+       "total_amount                    float64\n",
+       "congestion_surcharge            float64\n",
+       "Airport_fee                     float64\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.dtypes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a8068399-dcef-4be5-928d-fce93feb14ac",
    "metadata": {},
    "outputs": [],
    "source": []
