--- a/01-intro/duration-prediction.ipynb
+++ b/01-intro/duration-prediction.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 2,
    "id": "72f842b8-dad9-4c85-b13f-b6b9434dc372",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "c6dcc173-99de-4903-9152-c6a90003be7d",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 4,
    "id": "72599196-9855-409c-91e4-4fbc7d969a96",
    "metadata": {},
    "outputs": [
@@ -250,7 +250,7 @@
        "4                  0.00  "
       ]
      },
-     "execution_count": 86,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "id": "1806f1ad-ed12-4362-8530-a10b38784522",
    "metadata": {},
    "outputs": [],
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 6,
    "id": "55f2c86d-7c83-47ab-a2d3-4b4d335a9238",
    "metadata": {},
    "outputs": [
@@ -658,7 +658,7 @@
        "[76518 rows x 21 columns]"
       ]
      },
-     "execution_count": 90,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 7,
    "id": "b83d4f7b-6636-4c45-9ccc-d9b253d079b5",
    "metadata": {},
    "outputs": [],
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 8,
    "id": "e3dc2191-fc1f-4a80-a286-e397f6e0e68d",
    "metadata": {},
    "outputs": [
@@ -689,7 +689,7 @@
        "Timedelta('0 days 00:03:56')"
       ]
      },
-     "execution_count": 92,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 9,
    "id": "f000a876-2008-40f3-9c20-7ea195bec3c6",
    "metadata": {},
    "outputs": [
@@ -710,7 +710,7 @@
        "236.0"
       ]
      },
-     "execution_count": 93,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "bb445de8-4fd7-44e2-ac9b-7ec12480ce90",
    "metadata": {},
    "outputs": [],
@@ -731,7 +731,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 11,
    "id": "f2ea1ec8-bf1a-45c1-ae28-c8e4df80ccba",
    "metadata": {},
    "outputs": [
@@ -746,10 +746,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7d08166eced0>"
+       "<seaborn.axisgrid.FacetGrid at 0x70c2aaab6510>"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -770,7 +770,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 12,
    "id": "51e884e9-9dfd-4d9a-a52a-890b8d5f81c0",
    "metadata": {},
    "outputs": [
@@ -793,7 +793,7 @@
        "Name: duration, dtype: float64"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -804,7 +804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "ba997efb-ed25-48e6-8bdf-c7357c724a61",
    "metadata": {},
    "outputs": [
@@ -814,7 +814,7 @@
        "0.9782404140202305"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "7e0bc989-980a-409d-8d2a-c73f5ef19a9f",
    "metadata": {},
    "outputs": [],
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "9a625506-83df-417c-9895-25a176116f7d",
    "metadata": {},
    "outputs": [
@@ -866,7 +866,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -877,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "id": "b69a4e1d-1e57-4ff7-8be1-285a68b58872",
    "metadata": {},
    "outputs": [],
@@ -888,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "id": "07cc8631-92ef-4c2b-aec7-9916e33e1aa8",
    "metadata": {},
    "outputs": [
@@ -896,7 +896,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_15117/1194591429.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_4828/1194591429.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -911,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 18,
    "id": "5460a43c-a30b-413a-b5ec-f8e8c7ea03c6",
    "metadata": {},
    "outputs": [
@@ -942,7 +942,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +953,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 19,
    "id": "3c678cd2-0080-4470-bbed-6b7c49c4849f",
    "metadata": {},
    "outputs": [
@@ -972,7 +972,7 @@
        " {'PULocationID': '74', 'DOLocationID': '60', 'trip_distance': 5.48}]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 20,
    "id": "488f250c-d65d-4127-9f70-1a351286315e",
    "metadata": {},
    "outputs": [],
@@ -993,7 +993,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 21,
    "id": "b0838ee6-477c-4427-8774-395231b501ad",
    "metadata": {},
    "outputs": [],
@@ -1004,7 +1004,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 22,
    "id": "213be911-526b-46f4-b72d-e1e80501f46a",
    "metadata": {},
    "outputs": [
@@ -1015,7 +1015,7 @@
        "\twith 224559 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1026,7 +1026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 23,
    "id": "7162211b-d283-4ee8-abba-6e2a6fb111b7",
    "metadata": {},
    "outputs": [
@@ -1542,7 +1542,7 @@
        " 'trip_distance']"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1553,7 +1553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 24,
    "id": "75bb54f9-a27b-4a03-8741-1b4020728585",
    "metadata": {},
    "outputs": [],
@@ -1564,7 +1564,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 25,
    "id": "f1a045f7-194d-489b-b8ea-4ddf18d23787",
    "metadata": {},
    "outputs": [
@@ -1575,7 +1575,7 @@
        "       27.        , 10.        ])"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1586,7 +1586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 26,
    "id": "40932517-a8d2-4592-8cc8-54fbab6e3235",
    "metadata": {},
    "outputs": [
@@ -1599,7 +1599,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1611,7 +1611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 27,
    "id": "95187442-801e-405f-952c-d21b4917ca02",
    "metadata": {},
    "outputs": [],
@@ -1621,7 +1621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 28,
    "id": "edcb9c3e-4e23-41bc-a7b6-23ebac4c6063",
    "metadata": {},
    "outputs": [
@@ -1636,10 +1636,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7ae81d20b3d0>"
+       "<seaborn.axisgrid.FacetGrid at 0x70c2a921f550>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1660,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 29,
    "id": "cc33768d-4414-45e5-9535-55fe6370936c",
    "metadata": {},
    "outputs": [
@@ -1675,10 +1675,10 @@
     {
      "data": {
       "text/plain": [
-       "<seaborn.axisgrid.FacetGrid at 0x7ae83ff2b110>"
+       "<seaborn.axisgrid.FacetGrid at 0x70c2a92a94d0>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1699,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 30,
    "id": "ff01a4ec-37b5-49e6-8761-92fc6ebedd18",
    "metadata": {},
    "outputs": [
@@ -1707,7 +1707,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_15117/1505421196.py:1: UserWarning: \n",
+      "/tmp/ipykernel_4828/1505421196.py:1: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -1720,7 +1720,7 @@
       "  sns.distplot(y_pred, label='prediction')\n",
       "/home/codespace/anaconda3/lib/python3.11/site-packages/seaborn/_oldcore.py:1119: FutureWarning: use_inf_as_na option is deprecated and will be removed in a future version. Convert inf values to NaN before operating instead.\n",
       "  with pd.option_context('mode.use_inf_as_na', True):\n",
-      "/tmp/ipykernel_15117/1505421196.py:2: UserWarning: \n",
+      "/tmp/ipykernel_4828/1505421196.py:2: UserWarning: \n",
       "\n",
       "`distplot` is a deprecated function and will be removed in seaborn v0.14.0.\n",
       "\n",
@@ -1738,10 +1738,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.legend.Legend at 0x7ae7f6aeed90>"
+       "<matplotlib.legend.Legend at 0x70c2a8dd5a90>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1764,7 +1764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 31,
    "id": "1d576223-baab-4859-bc37-cc9ed1bc0abf",
    "metadata": {},
    "outputs": [
@@ -1774,7 +1774,7 @@
        "11.384311803861507"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1786,7 +1786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 32,
    "id": "01d9c347-845d-4b5c-9cf9-bbf5ed5fbd8f",
    "metadata": {},
    "outputs": [],
@@ -1804,7 +1804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 33,
    "id": "61e4f5d5-709c-4baa-8736-3e620734e030",
    "metadata": {},
    "outputs": [],
@@ -1815,7 +1815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 34,
    "id": "dd7d2ba0",
    "metadata": {},
    "outputs": [
@@ -1846,7 +1846,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1858,7 +1858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "id": "c9bd6d3d-3c89-4d4f-9797-7add1c3843c9",
    "metadata": {},
    "outputs": [],
@@ -1871,7 +1871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "id": "39907306",
    "metadata": {},
    "outputs": [],
@@ -1885,7 +1885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "id": "adea9e53",
    "metadata": {},
    "outputs": [],
@@ -1897,17 +1897,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 38,
    "id": "b91f3fbf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10.50358275176958"
+       "10.490691215344976"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1923,7 +1923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 39,
    "id": "cc7c76a8",
    "metadata": {},
    "outputs": [],
